--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>Excursion</title>
-        <link href='excursion\resources\css\style.css' rel="stylesheet">
+        <link href='C:\projects\excursion\resources\css\style.css' rel="stylesheet">
     </head>
+<body>
     <header>
         <h1>Discover hidden places in the world around you</h1>
-        <p><a>Download Excursion (Coming Soon)</a></p>
+        <p class='download'>Download Excursion (Coming Soon)</p>
     </header>
     <div class='video'>
         <video autoplay controls>
@@ -14,4 +15,16 @@
             Your browser does not support the video
         </video>
     </div>
+    <div class='main'>
+        <h2>Your personal travel guide</h2>
+        <p>excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src='https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg' alt='tents under the night sky'>
+        <p><img src='https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png' alt='phone icon'></p>
+        <h2>Coming Soon for IPhone and Android</h2>
+        <p class='download'>Download Excursion (Coming Soon)</p>
+    </div>
+    <div class="footer">
+        <h6>&copy; Excursion</h6>
+    </div>
+</body>
 </html>
