--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <p class='download'>Download Excursion (Coming Soon)</p>
     </header>
     <div class='video'>
-        <video autoplay controls>
-            <source src="C:\projects\excursion\resources\excursion.mp4" type="video/mp4">
+        <video autoplay loop muted>
+            <source src="C:\projects\excursion\resources\excursion.mp4" type="video/mp4" />
             Your browser does not support the video
         </video>
     </div>
